A whole bunch of changes - All progwidgets now implement equals/hashcode - So they can be stored as an item component directly, inside   the SavedDroneProgram wrapper (instead of as serialized NBT) - Fixed Ender Visor overlay render - Updated to NeoForge 21.0.133, dropped deprecated initializeClient() - General cleanup - Fixed third party preinit (was running too early)